manifests/workload-east.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-a-consumer
---
apiVersion: v1
kind: Service
metadata:
  name: app-a-consumer
  namespace: app-a-consumer
  labels:
    app: app-a-consumer
  annotations:
    io.cilium/global-service: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-a-producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a-producer
  namespace: app-a-producer
  labels:
    app: app-a-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a-producer
  template:
    metadata:
      labels:
        app: app-a-producer
    spec:
      containers:
        - name: k6
          image: grafana/k6:0.49.0
          imagePullPolicy: IfNotPresent
          args: ["run","/scripts/script.js"]
          volumeMounts:
            - name: k6-scripts
              mountPath: /scripts
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
      volumes:
        - name: k6-scripts
          configMap:
            name: k6-httpbin-script
            items:
              - key: script.js
                path: script.js
